--- a/css/common.css
+++ b/css/common.css
@@ -18,7 +18,11 @@ body
     -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.5); /* Для Safari и Chrome */
     box-shadow: 0 0 10px rgba(0,0,0,0.5); /* Параметры тени */
 }
-
+img
+{
+    display: block;
+    border: 0;
+}
 /* Search */
 .search
 {
@@ -74,9 +78,6 @@ body
 {
     border: 5px solid #eee;
     cursor: pointer;
-}
-img{
-    display: block;
 }
 .album-bar__album-element span
 {
