--- a/css/common.css
+++ b/css/common.css
@@ -153,20 +153,25 @@ img
 }
 .preview-bar__item
 {
-    float: left;
-    border: 1px solid #888;
-    padding: 5px;
-    margin-left: 5px;
-    opacity: 0.6;
-    position: relative;
-}
-.preview-bar__item:hover
-{
-    border: 1px solid #000;
-    opacity: 1;
+    
 }
 .preview-bar_wrapp
 {
     overflow: hidden;
     margin-top: -93px;
 }
+.preview-bar__border:hover
+{
+    border: 1px solid #000;
+    opacity: 1;
+}
+.preview-bar__border
+{
+    opacity: 0.6;
+    position: relative;
+    float: left;
+    border: 1px solid #888;
+    padding: 5px;
+    margin-left: 5px;
+}
+/* Large image */
