--- a/css/common.css
+++ b/css/common.css
@@ -114,18 +114,6 @@ img
 }
 
 /* Container */
-.container__gradient
-{
-    background-image: linear-gradient(bottom, #D2D8DB 0%, #EAF2F7 70%);
-    background-image: -o-linear-gradient(bottom, #D2D8DB 0%, #EAF2F7 70%);
-    background-image: -moz-linear-gradient(bottom, #D2D8DB 0%, #EAF2F7 70%);
-    background-image: -webkit-linear-gradient(bottom, #D2D8DB 0%, #EAF2F7 70%);
-    background-image: -ms-linear-gradient(bottom, #D2D8DB 0%, #EAF2F7 70%);
-    background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0, #D2D8DB),color-stop(0.7, #EAF2F7));
-    
-    width: 100%;
-    height: 300px;
-}
 .container
 {
     height: 100%;
@@ -153,7 +141,7 @@ img
 }
 .preview-bar__item
 {
-    
+    cursor: pointer;   
 }
 .preview-bar_wrapp
 {
