--- a/css/common.css
+++ b/css/common.css
@@ -6,7 +6,7 @@
 html,body
 {
     height: 100%;
-    background: #d2d8db;
+    background: url('../img/bg.png');
 }
 .box_shadow
 {
@@ -33,6 +33,7 @@ img
     height: auto !important;
     height: 100%;
     margin: 0 0 -100px 0; /* отрицательный нижний отступ на высоту футера */
+    background: url('../img/bg.png');
 }
 .preloader
 {
@@ -70,7 +71,7 @@ img
 {
     width: 100%;
     height: 180px;
-    background: #595959;
+    background: #141414;
     overflow: hidden;
     
 }
