--- a/css/common.css
+++ b/css/common.css
@@ -143,8 +143,32 @@ img
     height: 100%;
     overflow: hidden;
 }
+.left
+{
+    background: url('../img/left.png');
+    width: 55px;
+    height: 54px;
+    border: 0;
+    cursor: pointer;
+    margin: 10px;
+}
+.right
+{
+    background: url('../img/right.png');
+    width: 55px;
+    height: 54px;
+    border: 0;
+    cursor: pointer;
+    float: right;
+    margin: 10px;
+}
+.container__arrows
+{
+    position: absolute;
+    height: 80px;
+    width: 100%;
+}
 /* Preview-bar */
-
 .preview-bar
 {
     width: 100%;
@@ -193,13 +217,14 @@ img
     padding: 5px;
     margin-left: 5px;
 }
-/* Large image */
 
+/* Large image */
 .container img
 {
     display: block;
 }
-.box{
+.box
+{
  margin:30px auto 10px auto;
  border: 5px solid #eee;
  background: #333;
@@ -218,30 +243,4 @@ img
 {
     position: absolute;
     
-}
-
-.left
-{
-    background: url('../img/left.png');
-    width: 55px;
-    height: 54px;
-    border: 0;
-    cursor: pointer;
-    margin: 10px;
-}
-.right
-{
-    background: url('../img/right.png');
-    width: 55px;
-    height: 54px;
-    border: 0;
-    cursor: pointer;
-    float: right;
-    margin: 10px;
-}
-.container__arrows
-{
-    position: absolute;
-    height: 80px;
-    width: 100%;
 }
